--- a/about.html
+++ b/about.html
@@ -112,14 +112,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-white d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-white rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-users text-primary"></i>
+                <i class="fa fa-users text-primary fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-white mb-0">Happy Clients</h6>
-                <h1 class="text-white mb-0" data-toggle="counter-up">50</h1>
+                <h1 class="text-white mb-0" data-toggle="counter-up">600</h1>
               </div>
             </div>
           </div>
@@ -129,14 +129,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-primary d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-primary rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-check text-white"></i>
+                <i class="fa fa-check text-white fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-primary mb-0">Projects Done</h6>
-                <h1 class="mb-0" data-toggle="counter-up">30</h1>
+                <h1 class="mb-0" data-toggle="counter-up">1200</h1>
               </div>
             </div>
           </div>
@@ -146,14 +146,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-white d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-white rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-award text-primary"></i>
+                <i class="fa fa-award text-primary fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-white mb-0">Years in Business</h6>
-                <h1 class="text-white mb-0" data-toggle="counter-up">3</h1>
+                <h1 class="text-white mb-0" data-toggle="counter-up">5</h1>
               </div>
             </div>
           </div>
@@ -455,7 +455,7 @@
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-envelope-open text-primary me-2"></i>
-              <p class="mb-0">info@tecdata.uk</p>
+              <p class="mb-0">m.usman.khan@tecdatait.com</p>
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
