--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tecdata</title>
+    <title>Tecdata - About</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="IT Software Company Web " name="keywords" />
     <meta content="Tecdata" name="description" />
@@ -53,7 +53,7 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Navbar & Carousel Start -->
+    <!-- Navbar Start -->
     <div class="container-fluid position-relative p-0">
       <nav class="navbar navbar-expand-lg navbar-light px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand px-5">
@@ -74,10 +74,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
-            <a href="index.html" class="nav-item text-primary nav-link active"
-              >Home</a
+            <a href="index.html" class="nav-item nav-link">Home</a>
+            <a href="about.html" class="nav-item text-primary active nav-link"
+              >About</a
             >
-            <a href="about.html" class="nav-item nav-link">About</a>
             <a href="service.html" class="nav-item nav-link">Services</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
           </div>
@@ -88,74 +88,19 @@
       </nav>
 
       <div
-        id="header-carousel"
-        class="carousel slide carousel-fade"
-        data-bs-ride="carousel"
+        class="container-fluid bg-primary py-5 bg-header"
+        style="margin-bottom: 90px"
       >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="w-100" src="img/carousel-1.jpg" alt="Image" />
-            <div
-              class="carousel-caption d-flex flex-column align-items-center justify-content-center"
-            >
-              <div class="p-3" style="max-width: 900px">
-                <h5 class="text-white text-uppercase mb-3 animated slideInDown">
-                  Business Growth
-                </h5>
-                <h1 class="display-1 text-white mb-md-4 animated zoomIn">
-                  Empowering Your Digital World
-                </h1>
-                <a
-                  href="contact.html"
-                  class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight"
-                  >Contact Us</a
-                >
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img class="w-100" src="img/carousel-2.jpg" alt="Image" />
-            <div
-              class="carousel-caption d-flex flex-column align-items-center justify-content-center"
-            >
-              <div class="p-3" style="max-width: 900px">
-                <h5 class="text-white text-uppercase mb-3 animated slideInDown">
-                  Creative & Innovative
-                </h5>
-                <h1 class="display-1 text-white mb-md-4 animated zoomIn">
-                  Want to know what we are doing?
-                </h1>
-
-                <a
-                  href="service.html"
-                  class="btn btn-outline-primary py-md-3 px-md-5 animated slideInRight"
-                  >Our Services</a
-                >
-              </div>
-            </div>
+        <div class="row py-5">
+          <div class="col-12 pt-lg-5 mt-lg-5 text-center">
+            <h1 class="display-4 text-white animated zoomIn">About Us</h1>
+            <a href="" class="h5 text-white">Home -></a>
+            <a href="" class="h5 text-white">About</a>
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
     </div>
-    <!-- Navbar & Carousel End -->
+    <!-- Navbar End -->
 
     <!-- Facts Start -->
     <div class="container-fluid facts py-5 pt-lg-0">
@@ -167,14 +112,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-white d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-white rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-users text-primary"></i>
+                <i class="fa fa-users text-primary fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-white mb-0">Happy Clients</h6>
-                <h1 class="text-white mb-0" data-toggle="counter-up">50</h1>
+                <h1 class="text-white mb-0" data-toggle="counter-up">600</h1>
               </div>
             </div>
           </div>
@@ -184,14 +129,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-primary d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-primary rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-check text-white"></i>
+                <i class="fa fa-check text-white fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-primary mb-0">Projects Done</h6>
-                <h1 class="mb-0" data-toggle="counter-up">30</h1>
+                <h1 class="mb-0" data-toggle="counter-up">1200</h1>
               </div>
             </div>
           </div>
@@ -201,14 +146,14 @@
               style="height: 150px"
             >
               <div
-                class="bg-white d-flex align-items-center justify-content-center rounded mb-2"
+                class="bg-white rounded-circle d-flex align-items-center justify-content-center rounded mb-2"
                 style="width: 60px; height: 60px"
               >
-                <i class="fa fa-award text-primary"></i>
+                <i class="fa fa-award text-primary fs-3"></i>
               </div>
               <div class="ps-4">
                 <h6 class="text-white mb-0">Years in Business</h6>
-                <h1 class="text-white mb-0" data-toggle="counter-up">3</h1>
+                <h1 class="text-white mb-0" data-toggle="counter-up">5</h1>
               </div>
             </div>
           </div>
@@ -382,113 +327,6 @@
     </div>
     <!-- Features Start -->
 
-    <!-- Service Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-      <div class="container py-5">
-        <div
-          class="section-title text-center position-relative pb-3 mb-5 mx-auto"
-          style="max-width: 600px"
-        >
-          <h5 class="fw-bold text-primary text-uppercase">Our Services</h5>
-          <h1 class="mb-0">Custom IT Solutions for Your Successful Business</h1>
-        </div>
-        <div class="row g-5">
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i
-                  class="fa-sharp fa-solid fa-file-contract text-white fs-3"
-                ></i>
-              </div>
-              <h4 class="mb-3">Maintenance Contract</h4>
-              <p class="m-0">
-                Say goodbye to IT downtime with our comprehensive IT AMC
-                services. Keep your systems running smoothly 24/7 with our
-                expert support
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i class="fa-solid fa-person-shelter text-white fs-3"></i>
-              </div>
-              <h4 class="mb-3">CCTV Solutions</h4>
-              <p class="m-0">
-                Protect your business with CCTV solutions. Monitor your premises
-                24/7 and keep your assets safe with our advanced surveillance
-                technology.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i class="fa-solid fa-ranking-star text-white fs-3"></i>
-              </div>
-              <h4 class="mb-3">Marketing Services</h4>
-              <p class="m-0">
-                Helping you create and execute your social media marketing
-                strategy. Using a variety of tools and resources to help you
-                optimize your social media presence.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i class="fa-solid fa-code text-white fs-3"></i>
-              </div>
-              <h4 class="mb-3">Web Development</h4>
-              <p class="m-0">
-                Creating stunning websites for your business. We use the latest
-                technologies and best practices to ensure your website is fast,
-                secure, and user-friendly.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i class="fa-solid fa-circle-info text-white fs-3"></i>
-              </div>
-              <h4 class="mb-3">Access Control Solutions</h4>
-              <p class="m-0">
-                Secure your business with Access Control solutions. Control who
-                has access to your premises and protect your assets.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.2s">
-            <div
-              class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center"
-            >
-              <div class="service-icon">
-                <i class="fa-solid fa-laptop-medical text-white fs-3"></i>
-              </div>
-              <h3 class="mb-3">IT Health Check</h3>
-              <p class="mb-3">
-                Our IT health check service will proactively assess your systems
-                and keep your technology healthy and your business running
-                smoothly.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Service End -->
-
     <!-- Team Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
       <div class="container py-5">
@@ -549,78 +387,6 @@
       </div>
     </div>
     <!-- Team End -->
-
-    <!-- Testimonial Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-      <div class="container py-5">
-        <div
-          class="section-title text-center position-relative pb-3 mb-4 mx-auto"
-          style="max-width: 600px"
-        >
-          <h5 class="fw-bold text-primary text-uppercase">Testimonial</h5>
-          <h1 class="mb-0">What Our Clients Say About Our Digital Services</h1>
-        </div>
-        <div
-          class="owl-carousel testimonial-carousel wow fadeInUp"
-          data-wow-delay="0.2s"
-        >
-          <div class="testimonial-item bg-light my-4">
-            <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-              <img
-                class="img-fluid rounded"
-                src="img/testimonial-1.jpg"
-                style="width: 60px; height: 60px"
-                alt=""
-              />
-              <div class="ps-4">
-                <h4 class="text-primary mb-1">H. Mudassir</h4>
-                <small class="text-uppercase">Pakistan</small>
-              </div>
-            </div>
-            <div class="pt-4 pb-5 px-5">
-              "Amazing Designs and Quality Work!"
-            </div>
-          </div>
-          <div class="testimonial-item bg-light my-4">
-            <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-              <img
-                class="img-fluid rounded"
-                src="img/testimonial-2.jpg"
-                style="width: 60px; height: 60px"
-                alt=""
-              />
-              <div class="ps-4">
-                <h4 class="text-primary mb-1">Laura</h4>
-                <small class="text-uppercase">Pakistan</small>
-              </div>
-            </div>
-            <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
-            </div>
-          </div>
-          <div class="testimonial-item bg-light my-4">
-            <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-              <img
-                class="img-fluid rounded"
-                src="img/testimonial-3.jpg"
-                style="width: 60px; height: 60px"
-                alt=""
-              />
-              <div class="ps-4">
-                <h4 class="text-primary mb-1">Client Name</h4>
-                <small class="text-uppercase">Profession</small>
-              </div>
-            </div>
-            <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
 
     <!-- Footer Start -->
     <div
@@ -689,7 +455,7 @@
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-envelope-open text-primary me-2"></i>
-              <p class="mb-0">info@tecdata.uk</p>
+              <p class="mb-0">m.usman.khan@tecdatait.com</p>
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
