--- a/service.html
+++ b/service.html
@@ -220,84 +220,152 @@
         </div>
         <div
           class="owl-carousel testimonial-carousel wow fadeInUp"
-          data-wow-delay="0.6s"
+          data-wow-delay="0.2s"
         >
           <div class="testimonial-item bg-light my-4">
             <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
               <img
                 class="img-fluid rounded"
-                src="img/testimonial-1.jpg"
+                src="img/client1.png"
                 style="width: 60px; height: 60px"
                 alt=""
               />
               <div class="ps-4">
-                <h4 class="text-primary mb-1">Client Name</h4>
-                <small class="text-uppercase">Profession</small>
+                <h4 class="text-primary mb-1">H. Mudassir</h4>
+                <small class="text-uppercase">Pakistan</small>
               </div>
             </div>
             <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
+              "Tecdata's expert team translated our vision into a captivating
+              website, and their IT solutions streamlined our processes. A
+              dependable partner for both design and technology.""
             </div>
           </div>
           <div class="testimonial-item bg-light my-4">
             <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
               <img
                 class="img-fluid rounded"
-                src="img/testimonial-2.jpg"
+                src="img/client2.png"
                 style="width: 60px; height: 60px"
                 alt=""
               />
               <div class="ps-4">
-                <h4 class="text-primary mb-1">Client Name</h4>
-                <small class="text-uppercase">Profession</small>
+                <h4 class="text-primary mb-1">Shubham</h4>
+                <small class="text-uppercase">India</small>
               </div>
             </div>
             <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
+              "Tecdata's comprehensive services, from web design to digital
+              marketing, elevated our brand. Their expertise in both technology
+              and marketing is truly commendable!"
             </div>
           </div>
           <div class="testimonial-item bg-light my-4">
             <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
               <img
                 class="img-fluid rounded"
-                src="img/testimonial-3.jpg"
+                src="img/client3.png"
                 style="width: 60px; height: 60px"
                 alt=""
               />
               <div class="ps-4">
-                <h4 class="text-primary mb-1">Client Name</h4>
-                <small class="text-uppercase">Profession</small>
+                <h4 class="text-primary mb-1">Moris</h4>
+                <small class="text-uppercase">California</small>
               </div>
             </div>
             <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
+              "Amazing Designs and Quality Work!"
             </div>
           </div>
           <div class="testimonial-item bg-light my-4">
             <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
               <img
                 class="img-fluid rounded"
-                src="img/testimonial-4.jpg"
+                src="img/client4.png"
                 style="width: 60px; height: 60px"
                 alt=""
               />
               <div class="ps-4">
-                <h4 class="text-primary mb-1">Client Name</h4>
-                <small class="text-uppercase">Profession</small>
+                <h4 class="text-primary mb-1">Hafsa</h4>
+                <small class="text-uppercase">India</small>
               </div>
             </div>
             <div class="pt-4 pb-5 px-5">
-              Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor
-              stet amet eirmod eos labore diam
+              "Tecdata's holistic solutions, including digital marketing
+              strategies, brought our business to the forefront. Their
+              dedication to excellence is reflected in every aspect of their
+              services."
+            </div>
+          </div>
+          <div class="testimonial-item bg-light my-4">
+            <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+              <img
+                class="img-fluid rounded"
+                src="img/client5.png"
+                style="width: 60px; height: 60px"
+                alt=""
+              />
+              <div class="ps-4">
+                <h4 class="text-primary mb-1">Harry</h4>
+                <small class="text-uppercase">United Kingdom</small>
+              </div>
+            </div>
+            <div class="pt-4 pb-5 px-5">
+              "Kudos to Tecdata for their seamless IT solutions and hardware
+              infrastructure services. They streamlined our operations, boosting
+              efficiency and security."
+            </div>
+          </div>
+          <div class="testimonial-item bg-light my-4">
+            <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
+              <img
+                class="img-fluid rounded"
+                src="img/client6.png"
+                style="width: 60px; height: 60px"
+                alt=""
+              />
+              <div class="ps-4">
+                <h4 class="text-primary mb-1">Hassan Mujahid</h4>
+                <small class="text-uppercase">Pakistan</small>
+              </div>
+            </div>
+            <div class="pt-4 pb-5 px-5">
+              "Thrilled with Tecdata's exceptional web design, IT solutions, and
+              strategic digital marketing. A well-rounded partner that helped us
+              achieve online success!"
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Testimonial End -->
+
+    <!-- Vendor Start -->
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+      <div class="container mb-5">
+        <div
+          class="text-center position-relative pb-3 mb-4 mx-auto"
+          style="max-width: 600px"
+        >
+          <h1 class="mb-0 text-primary">Our Customers</h1>
+        </div>
+        <div class="bg-white">
+          <div class="owl-carousel vendor-carousel">
+            <img src="img/2.png" alt="ekar" />
+            <img src="img/5.png" alt="Al-Madina Hypermarket" />
+            <img src="img/7.png" alt="LuLu" />
+            <img src="img/vendor2.jpeg" alt="Arabian Bakeries" />
+            <img src="img/4.png" alt="Hertz" />
+            <img src="img/vendor3.jpeg" alt="AJK Tourism and Archeology" />
+            <img src="img/6.png" alt="Nesto" />
+            <img src="img/vendor4.jpeg" alt="KPR" />
+            <img src="img/3.png" alt="noon" />
+            <img src="img/vendor5.jpeg" alt="Lahori Darbar Restr." />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Vendor End -->
 
     <!-- Footer Start -->
     <div
@@ -366,7 +434,7 @@
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-envelope-open text-primary me-2"></i>
-              <p class="mb-0">m.usman.khan@tecdatait.com</p>
+              <p class="mb-0">info@tecdatait.com</p>
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
