--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
             <div class="section-title position-relative pb-3 mb-5">
               <h5 class="fw-bold text-primary text-uppercase">About Us</h5>
               <h1 class="mb-0">
-                The Best IT Solution With 3+ Years of Experience
+                The Best IT Solution With 5+ Years of Experience
               </h1>
             </div>
             <p class="mb-4">
@@ -221,7 +221,7 @@
               <img
                 class="position-absolute w-100 h-100 rounded wow zoomIn"
                 data-wow-delay="0.4s"
-                src="img/about.jpg"
+                src="img/carousel-4-min.jpg"
                 style="object-fit: cover"
                 alt="about"
               />
@@ -282,7 +282,7 @@
               <img
                 class="position-absolute w-100 h-100 rounded wow zoomIn"
                 data-wow-delay="0.1s"
-                src="img/feature.jpg"
+                src="img/feature1-min.jpg"
                 style="object-fit: cover"
                 alt=""
               />
@@ -388,6 +388,33 @@
     </div>
     <!-- Team End -->
 
+    <!-- Vendor Start -->
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+      <div class="container mb-5">
+        <div
+          class="text-center position-relative pb-3 mb-4 mx-auto"
+          style="max-width: 600px"
+        >
+          <h1 class="mb-0 text-primary">Our Customers</h1>
+        </div>
+        <div class="bg-white">
+          <div class="owl-carousel vendor-carousel">
+            <img src="img/2.png" alt="ekar" />
+            <img src="img/5.png" alt="Al-Madina Hypermarket" />
+            <img src="img/7.png" alt="LuLu" />
+            <img src="img/vendor2.jpeg" alt="Arabian Bakeries" />
+            <img src="img/4.png" alt="Hertz" />
+            <img src="img/vendor3.jpeg" alt="AJK Tourism and Archeology" />
+            <img src="img/6.png" alt="Nesto" />
+            <img src="img/vendor4.jpeg" alt="KPR" />
+            <img src="img/3.png" alt="noon" />
+            <img src="img/vendor5.jpeg" alt="Lahori Darbar Restr." />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Vendor End -->
+
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-light mt-5 wow fadeInUp"
@@ -455,7 +482,7 @@
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-envelope-open text-primary me-2"></i>
-              <p class="mb-0">m.usman.khan@tecdatait.com</p>
+              <p class="mb-0">info@tecdatait.com</p>
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
