--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tecdata - About</title>
+    <title>Tecdata - Contact</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="IT Software Company Web " name="keywords" />
     <meta content="Tecdata" name="description" />
@@ -143,7 +143,7 @@
               </div>
               <div class="ps-4">
                 <h5 class="mb-2">Email to get free quote</h5>
-                <h4 class="text-primary mb-0">m.usman.khan@tecdatait.com</h4>
+                <h4 class="text-primary mb-0">info@tecdatait.com</h4>
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-envelope-open text-primary me-2"></i>
-              <p class="mb-0">m.usman.khan@tecdatait.com</p>
+              <p class="mb-0">info@tecdatait.com</p>
             </div>
             <div class="d-flex mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
