--- a/contact.html
+++ b/contact.html
@@ -203,7 +203,11 @@
                   ></textarea>
                 </div>
                 <div class="col-12">
-                  <button class="btn btn-primary w-100 py-3" type="submit">
+                  <button
+                    href="mailto:info@tecdatait.com"
+                    class="btn btn-primary w-100 py-3"
+                    type="submit"
+                  >
                     Send Message
                   </button>
                 </div>
