--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <img
             width="162px"
             height="auto"
-            src="/img/techdata-logo1.png"
+            src="./img/techdata-logo1.png"
             alt="Tecdata"
           />
         </a>
