--- a/service.html
+++ b/service.html
@@ -59,7 +59,7 @@
           <img
             width="162px"
             height="auto"
-            src="/img/techdata-logo1.png"
+            src="./img/techdata-logo1.png"
             alt="Tecdata"
           />
         </a>
@@ -380,7 +380,7 @@
                 <img
                   width="165px"
                   height="auto"
-                  src="/img/techdata-logo1.png"
+                  src="./img/techdata-logo1.png"
                   alt="Tecdata"
                 />
               </a>
