--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <img
             width="162px"
             height="auto"
-            src="/img/techdata-logo1.png"
+            src="./img/techdata-logo1.png"
             alt="Tecdata"
           />
         </a>
@@ -428,7 +428,7 @@
                 <img
                   width="165px"
                   height="auto"
-                  src="/img/techdata-logo1.png"
+                  src="./img/techdata-logo1.png"
                   alt="Tecdata"
                 />
               </a>
